2007-03-26  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3Uri.py: Output public HTTP URL for objects
	  stored with Public ACL.
	  
2007-02-28  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Verify supplied accesskey and secretkey
	  in interactive configuration path.
	* S3/Config.py: Hide access key and secret key
	  from debug output.
	* S3/S3.py: Modify S3Error exception to work
	  in python 2.4 (=> don't expect Exception is
	  a new-style class).
	* s3cmd: Updated for the above change.

2007-02-19  Michal Ludvig  <michal@logix.cz>

	* NEWS, INSTALL, README, setup.py: Added
	  more documentation.

2007-02-19  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py, s3cmd: New feature - allow "get" to stdout

2007-02-19  Michal Ludvig  <michal@logix.cz>

	* S3/S3fs.py: Removed (development moved to branch s3fs-devel).

2007-02-08  Michal Ludvig  <michal@logix.cz>

	* S3/S3fs.py: 
	  - Implemented mknod()
	  - Can create directory structure
	  - Rewritten to use SQLite3. Currently can create
	    the filesystem, and a root inode.

2007-02-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd (from /s3py:74): Renamed SVN top-level project
	  s3py to s3cmd

2007-02-07  Michal Ludvig  <michal@logix.cz>

	* setup.cfg: Only require Python 2.4, not 2.5
	* S3/Config.py: Removed show_uri - no longer needed,
	  it's now default

2007-02-07  Michal Ludvig  <michal@logix.cz>

	* setup.py
	  - Version 0.9.1

2007-02-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Change all "exit()" calls to "sys.exit()"
	  and allow for python 2.4
	* S3/S3.py: Removed dependency on hashlib -> allow for python 2.4

2007-01-27  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py, S3/S3Uri.py: Case insensitive regex in S3Uri.py

2007-01-26  Michal Ludvig  <michal@logix.cz>

	* S3/S3fs.py: Added support for stroing/loading inodes.
	  No data yet however.

2007-01-26  Michal Ludvig  <michal@logix.cz>

	* S3/S3fs.py: Initial version of S3fs module. 
	  Can create filesystem via "S3fs.mkfs()"
